feat: add Potter kata